--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,18 @@
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+    Основной макет для главного экрана приложения. Здесь используется RecyclerView
+    для отображения списка оборудования с возможностью вертикальной прокрутки
+    и FloatingActionButton для добавления новых элементов. Использование Material
+    компонентов обеспечивает современный внешний вид.
+-->
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- Список оборудования. RecyclerView автоматически прокручивается вниз при
+         большом количестве элементов. -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewEquipment"
         android:layout_width="match_parent"
@@ -12,13 +20,14 @@
         android:padding="16dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
+    <!-- Плавающая кнопка для добавления нового оборудования -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="Добавить оборудование"
         app:srcCompat="@android:drawable/ic_input_add"
-        app:layout_anchor="@id/coordinator"
+        app:layout_anchor="@id/recyclerViewEquipment"
         app:layout_anchorGravity="bottom|end"
         android:layout_margin="16dp" />
 
