Force bottom sheet peek visibility on main screen

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,8 @@
         android:elevation="8dp"
         android:orientation="vertical"
         app:behavior_hideable="false"
-        app:behavior_peekHeight="208dp"
+        android:minHeight="@dimen/main_bottom_sheet_peek_height"
+        app:behavior_peekHeight="@dimen/main_bottom_sheet_peek_height"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
         <View
